2005-12-07  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	* hw/xfree86/utils/xorgcfg/Makefile.am:
	Change to use the app-defaults default dir configured in libXt.

2005-12-06  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* Xprint/doc/Makefile.am:
	* doc/Makefile.am:
	* hw/dmx/Makefile.am:
	* hw/dmx/config/Makefile.am:
	* hw/vfb/Makefile.am:
	* hw/xfree86/getconfig/Makefile.am:
	* hw/xfree86/utils/gtf/Makefile.am:
	* hw/xfree86/utils/kbd_mode/Makefile.am:
	* hw/xfree86/utils/pcitweak/Makefile.am:
	* hw/xfree86/utils/scanpci/Makefile.am:
	* hw/xfree86/utils/xorgcfg/Makefile.am:
	* hw/xfree86/utils/xorgconfig/Makefile.am:
	* hw/xnest/Makefile.am:
	Change *man_SOURCES ==> *man_PRE to fix autotools warnings.

2005-12-06  Adam Jackson  <ajax@freedesktop.org>

	* configure.ac:
	Bug #5230: Fix whitespace bugs.

2005-12-06  Alan Coopersmith  <alan.coopersmith@sun.com>

	* os/Makefile.am: 
	Bugzilla #5219 <https://bugs.freedesktop.org/show_bug.cgi?id=5219>
	Make sure all optional sources are included in EXTRA_DIST,
	even if they aren't used on the platform the distballs are made on.

2005-12-03  Alan Coopersmith  <alan.coopersmith@sun.com>

	* xorg/Makefile.am:
	* xorg/configure.ac:
	* xorg/hw/xfree86/Makefile.am:
	* hw/xfree86/dixmods/Makefile.am: 
	Bugzilla #4809 <https://bugs.freedesktop.org/show_bug.cgi?id=4809>
	Patch #3908 <https://bugs.freedesktop.org/attachment.cgi?id=3908>
	xf8_32wid and cfb24 only need to be built on sparc

2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.
	Update release string to 6.99.99.903 (i.e., 7.0 RC3).

2005-12-02  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* GL/glx/Makefile.am:
	* GL/mesa/X/Makefile.am:
	* GL/mesa/array_cache/Makefile.am:
	* GL/mesa/glapi/Makefile.am:
	* GL/mesa/main/Makefile.am:
	* GL/mesa/math/Makefile.am:
	* GL/mesa/shader/Makefile.am:
	* GL/mesa/shader/grammar/Makefile.am:
	* GL/mesa/shader/slang/Makefile.am: