@@ -72,4 +72,7 @@ if INSTALL_SETUID
 	chmod u+s $(DESTDIR)$(bindir)/Xorg
 endif
 
-EXTRA_DIST = xorgconf.cpp Options
+optionsdir = $(libdir)/X11
+dist_options_DATA = Options
+
+EXTRA_DIST = xorgconf.cpp
