@@ -33,7 +33,7 @@ dist_X11_DATA = Cards
 
 xorgconfig_CFLAGS = @SERVER_DEFINES@ @XORGCONFIG_DEP_CFLAGS@ \
 	-DCARD_DATABASE_FILE='"$(X11dir)/Cards"' \
-	-DPROJECTROOT='"$(prefix)"' \
+	-DPROJECTROOT='"$(PROJECTROOT)"' \
         -DFILEMANSUFFIX='"$(FILE_MAN_SUFFIX)"' \
         -DXVERSIONSTRING='"$(PACKAGE_STRING)"'
 
