@@ -1,3 +1,11 @@
+2005-12-08  Kevin E. Martin  <kem-at-freedesktop-dot-org>
+
+	* configure.ac:
+	* hw/xfree86/Makefile.am:
+	* hw/xfree86/utils/xorgcfg/Makefile.am:
+	* hw/xfree86/utils/xorgconfig/Makefile.am:
+	Add configure options to allow hard-coded paths to be changed.
+
 2005-12-07  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
